--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
     "uuid": "^8.3.0"
   },
   "scripts": {
